<resources>
    <string name="app_name">WidestApp</string>
    <string name="labelfor_email"> E-mail</string>
    <string name="labelfor_senha"> Senha </string>
    <string name="desc_img"> Widest View Logo (png)</string>
    <string name="desc_img_user"> Imagem Usuário (svg)</string>
    <string name="desc_img_senha"> Imagem Senha - visível ou coberta. (svg) </string>
    <string name="botaoLogar"> Entrar </string>
    <string name="txtpendencias"> Pendências </string>
    <string name="teste"> Out Of Lens</string>
    <string name="tema"> Fotografia </string>
    <string name="trabsanteriores"> Trabalhos Anteriores </string>
    <string name="txtcli"> Cliente </string>
    <string name="txtprojeto"> Projeto </string>
    <string name="txtfuncionario"> Funcionário </string>
    <string name="txtservicos"> Serviços </string>
    <string name="testenome"> Pedro Tamas </string>
    <string name="descteste"> Desenvolvimento ASP.NET e Design</string>
    <string name="testeemail"> pedro.tamas@etec.sp.gov.br</string>
    <string name="opendrawer">Open navigation drawer</string>
    <string name="closedrawer">Close navigation drawer</string>
    <string name="menu"> Página Inicial </string>
    <string name="cadastro"> Cadastrar </string>
    <string name="novo_cli"> Novo Cliente </string>
    <string name="alterar"> Alterar </string>
    <string name="consultar"> Consultar </string>
    <string name="nome"> Nome </string>
    <string name="cnpj"> CNPJ </string>
    <string name="endereco"> Endereço </string>
    <string name="telefone"> Telefone </string>
    <string name="campo"> Escolha o campo </string>
    <string name="escolhacliente"> Escolha o cliente </string>
    <string name="alteracao"> Faça a alteração aqui  </string>
    <string name="altercli"> Alterar Cliente </string>
    <string name="selectcli"> Consultar Cliente</string>
    <string name="newprojeto"> Novo Projeto </string>
    <string name="temaprojeto"> Tema </string>
    <string name="capaprojeto"> Capa </string>
    <string name="fotoprojeto"> Selecionar fotos </string>
    <string name="codcli_project"> Código do cliente </string>
    <string name="alterarprojeto"> Alterar Projeto </string>
    <string name="escolhaprojeto"> Escolha o Projeto </string>
    <string name="selectprojeto"> Consultar Projeto </string>
    <string name="clicorrespond"> Cliente correspondente </string>
    <string name="valorservico"> Valor </string>
    <string name="descservico"> Descrição </string>
    <string name="ativoservico"> Ativo </string>
    <string name="consultaservicos"> Consultar Serviços  </string>
    <string name="atualizarservicos"> Atualizar Serviços </string>
    <string name="escolhaserviços"> Escolha o Serviço </string>
    <string name="tituloservico"> Novo Serviço </string>
    <string name="titulofuncionario"> Novo Funcionário </string>
    <string name="emailfunc"> Email </string>
    <string name="senhafunc"> Senha </string>
    <string name="alterarfunc"> Alterar Funcionário </string>
    <string name="escolherfunc"> Escolher Funcionário </string>
    <string name="consultarfunc"> Consultar Funcionário </string>
    <string name="fotofunc"> Foto de Perfil</string>
    <string name="contrato"> Contrato </string>
    <string name="novocontrato"> Novo Contrato </string>
    <string name="projetocorrespod"> Projeto Correspondente </string>
    <string name="consultarcontrato"> Consultar Contrato </string>
    <string name="escolhercontrato"> Escolher o Contrato </string>
    <string name="alterarcontrato"> Alterar Contrato </string>
    <string name="datapreventrega"> Data </string>
    <string name="adicionarfoto"> Adicionar </string>
    <string name="cargofunc"> Cargo </string>
    <string name="sobre"> Sobre </string>
    <string name="versao"> Versão 1.0 </string>
    <string name="nomeempresa"> WIDESTAPP </string>
    <string name="enderecoempresa"> Endereco: Rua Vergueiro, 2016 - Vila Mariana </string>
    <string name="distancia"> Distância da localização:  </string>
    <string name="servicocorresp"> Serviço correspondente </string>
    <string name="funcio"> Funcionário correspondente </string>
    <string name="ligacao"> Ligação funcionário projeto </string>
    <string name="ligarcom"> <u> Realizar união </u></string>
    <string name="relatorio"> Relatório </string>
    <string name="inserirrelato"> Novo Relatório </string>
    <string name="conteudo"> Conteúdo </string>
    <string name="proproj"><justify>Projeto Relacionado </justify>  </string>
    <string name="consultarelatorio"> Consulta de Relatório </string>
    <string name="selecionerelatorio"> Selecione um relatório </string>
    <string name="intentmap"><u>Endereco para o mapa </u> </string>
    <string name="funcionario"> Funcionários: </string>



</resources>